# Heather

./: .atom-build.yml  .gitignore  .sharingan.yml  .travis.yml  Makefile  README.md  Sharingan.cabal  appveyor.yml  build-cabal.bat  build-f.bat  build-stack.bat  build.bat  h.cabal  index.html  shake.it.hs  sharingan.cabal  stack.yaml
src/: Amaterasu.hs  AsyncReactive.hs  Config.hs  Depot.hs  EnvChecker.hs  Exec.hs  FileSystem.hs  Gclient.hs  HTTP.hs  Model.hs  ProgressBar.hs  Sharingan-temp-rename.hs  Sharingan.hs  SharinganProcess.hs  Shell.hs  Sync.hs  Tools.hs  Trim.hs  Yaml.hs  config.hs  h.hs  sharingan.hs  vcs.hs
src/Shell/: Helper.hs  Pull.hs  Rebase.hs
