name:          Sharingan
version:       0.9.3
license:       BSD3
author:        Heather Cynede
maintainer:    Heather Cynede <Heather@live.ru>

build-type: Simple
cabal-version: >= 1.6

Executable    sharingan
  Main-Is:    Sharingan.hs
  Other-Modules:
    Amaterasu
    Config
    EnvChecker
    Exec
    FileSystem
    HTTP
    Model
    Paths_Sharingan
    SharinganProcess
    Shell.Helper
    Shell.Pull
    Shell.Rebase
    Tools
    Trim
    Yaml
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4.3 && < 666
    , yaml
    , vector
    , executable-path
    , zip-archive
    , filepath
    , network
    , conduit
    , resourcet
    , http-conduit
    , conduit-extra
    , http-types
    , directory
    , bytestring
    , process
    , eternal >= 0.1.1
    , split
    , despair
    , async
    , optparse-applicative
    , base-unicode-symbols
    , utf8-string
    , transformers
    , IfElse
  if !os(windows)
    Build-Depends:
      unix >= 2.5
