name:          Sharingan
version:       1.0.3
license:       BSD3
author:        Mikhail Pukhlikov
maintainer:    Mikhail Pukhlikov <cynede@gentoo.org>

build-type: Simple
cabal-version: >= 1.6

Executable    sharingan
  Main-Is:    Sharingan.hs
  Other-Modules:
    Amaterasu
    Sync
    Config
    EnvChecker
    Exec
    FileSystem
    Model
    Paths_Sharingan
    SharinganProcess
    Shell.Helper
    Shell.Pull
    Shell.Rebase
    Tools
    Trim
    Yaml
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4.3 && < 666
    , yaml
    , vector
    , executable-path
    , filepath
    , directory
    , bytestring
    , process
    , eternal >= 0.1.1
    , split
    , despair
    , optparse-applicative
    , base-unicode-symbols
    , utf8-string
    , transformers
    , IfElse
  if !os(windows)
    Build-Depends:
      unix >= 2.5
