name:          Sharingan
version:       0.2.4
license:       BSD3
author:        Heather Cynede
maintainer:    Heather Cynede <Cynede@Gentoo.org>

build-type: Simple
cabal-version: >= 1.6

Executable    sharingan
  Main-Is:    Sharingan.hs
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4.3 && < 5
    , yaml
    , executable-path
    , zip-archive
    , filepath
    , directory
    , bytestring
    , process
    , eternal >= 0.0.9
    , split
    , despair
    , async
