name:          Sharingan
version:       0.4.1
license:       BSD3
author:        Heather Cynede
maintainer:    Heather Cynede <Heather@live.ru>

build-type: Simple
cabal-version: >= 1.6

Executable    sharingan
  Main-Is:    Sharingan.hs
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4.3 && < 666
    , yaml
    , executable-path
    , zip-archive
    , filepath
    , directory
    , bytestring
    , process
    , eternal >= 0.0.9
    , split
    , despair
    , async
    , optparse-applicative
