name:          Sharingan
version:       0.5.1
license:       BSD3
author:        Heather Cynede
maintainer:    Heather Cynede <Heather@live.ru>

build-type: Simple
cabal-version: >= 1.6

Executable    sharingan
  Main-Is:    Sharingan.hs
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4.3 && < 666
    , yaml
    , executable-path
    , zip-archive
    , filepath
    , network
    , conduit
    , http-conduit
    , conduit-extra
    , http-types
    , directory
    , bytestring
    , process
    , eternal >= 0.1.1
    , split
    , despair
    , async
    , optparse-applicative
    , base-unicode-symbols
    , utf8-string
    , transformers
